# rust-openssl-verify

./: .travis.yml  Cargo.toml  README.md
doc/v0.1.0/: search-index.js
doc/v0.1.0/openssl_verify/: fn.verify_callback.html  fn.verify_hostname.html  index.html
doc/v0.1.0/src/openssl_verify/src/: lib.rs.html
doc/v0.2.0/: search-index.js
doc/v0.2.0/openssl_verify/: fn.verify_callback.html  fn.verify_hostname.html  index.html
doc/v0.2.0/src/openssl_verify/src/: lib.rs.html
src/: lib.rs
test/: invalid-san.cert.pem  invalid-san.cnf  invalid-san.key.pem  openssl-san.cnf  valid-san.cert.pem  valid-san.cnf  valid-san.key.pem  valid-sn.cert.pem  valid-sn.key.pem
